--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -501,6 +501,12 @@ body .t-content.t-state-active {
 	padding: 5px;
 }
 
+.modal-large {
+	width: 800px !important;
+	margin: -250px 0 0 -400px !important;
+}
+
+
 
 /* HTML editor (tiny mce)
 -------------------------------------------------------------- */
