--- a/src/Presentation/SmartStore.Web/Administration/Views/Plugin/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Plugin/List.cshtml
@@ -208,7 +208,7 @@
 }
 
 <div id="plugin-licence-modal">	
-	<div class="modal hide fade" tabindex="-1">
+	<div class="modal modal-large hide fade" tabindex="-1">
 		<div class="modal-header">
 			<button type="button" class="close" data-dismiss="modal"><b>x</b></button>
 			<h4 class="caption">
